# kdrift

./: .cruft.json  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: build.yaml  publish-rc.yml  publish.yaml  release-please.yml
docs/: SKILL.md  configuration.md  development.md
docs/agents/: AGENTS.md
docs/agents/knowledge/: KNOWLEDGE.md
docs/agents/skills/: SKILL.md
docs/decisions/: README.md
docs/plans/: vscode-marketplace-publishing.md
src/kdrift/: __init__.py  __main__.py  cli.py  config.py  diff.py  discover.py  git.py  logging.py  lsp_server.py  mcp_server.py  models.py  pipeline.py  render.py  watch.py
tests/: conftest.py  test_cli.py  test_config.py  test_diff.py  test_discover.py  test_git.py  test_logging.py  test_mcp_integration.py  test_models.py  test_pipeline.py  test_render.py  test_watch.py
vscode-kdrift/: .vscodeignore  README.md  esbuild.js  package.json
vscode-kdrift/src/: diffRunner.ts  driftPreviewProvider.ts  extension.ts  lspClient.ts  types.ts
vscode-kdrift/src/webview/: preview.ts  styles.css
